# nodefoundry-stellar-sc

./: .gitignore  CONTRACTS_README.md  README.md  lint-check.sh  pre-commit-check.sh  quick-check.sh
.github/: copilot-instructions.md
contracts/depin-registry/: Cargo.toml
contracts/depin-registry/src/: lib.rs  test.rs
contracts/depin-registry/test_snapshots/test/: test_depin_data_validation.1.json  test_depin_registry_happy_path.1.json  test_depin_status_management.1.json  test_invalid_rating.1.json  test_negative_cost.1.json  test_non_admin_cannot_add_depin.1.json  test_rate_non_existent_depin.1.json
contracts/order/: Cargo.toml
contracts/order/src/: lib.rs  test.rs
contracts/order/test_snapshots/test/: test_complete_order.1.json  test_complete_order_invalid_status.1.json  test_contract_setup.1.json  test_create_order_invalid_amount.1.json  test_get_order_not_found.1.json  test_list_orders_empty.1.json  (+2 more)
contracts/reputation/: Cargo.toml  Makefile
contracts/reputation/src/: lib.rs  test.rs
contracts/treasury/: Cargo.toml  Makefile
contracts/treasury/src/: lib.rs  test.rs
contracts/user-profile/: Cargo.toml  PLATFORM_README.md  USER_PROFILE_README.md
contracts/user-profile/src/: lib.rs  test.rs
contracts/user-profile/test_snapshots/test/: test_admin_functions.1.json  test_balance_utility_functions.1.json  test_contract_initialization.1.json  test_insufficient_balance_withdrawal.1.json  test_referral_system.1.json  test_subscription_upgrade.1.json  test_user_profile_creation.1.json  test_user_profile_updates.1.json  test_wallet_operations.1.json
(+6 files in other folders)
