[package]
name = "user-profile"
version = "0.1.0"
edition = "2021"
publish = false
description = "NodeFoundry platform contract for user profiles, wallet management, and DePIN interactions"

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
